# cs348_project

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  template.env  test.py  test1.py  test2.py  test4.py  test5.py  test6.py  testConnect.py
.github/workflows/: unit-tests.yml  unitTestWorkflow.yml
Data/Development Dataset/: Booking.csv  Building.csv  Cancellation.csv  Room.csv  User.csv
Data/Generator Resources/buildings/: building_name_prefix.txt  building_name_suffix.txt  cities.txt  directional_prefixes.txt  street_names.txt  street_types.txt
Data/Generator Resources/rooms/: room_capacity.txt
Data/Generator Resources/users/: emails.txt  user_first_names.txt  user_last_names.txt
Data/Production Dataset/: Building.csv  Cancellation.csv  Room.csv  User.csv
Data/Sample Dataset/: Booking.csv  Building.csv  Cancellation.csv  Room.csv  User.csv
Data/Toy Dataset/: Booking.csv  Building.csv  Cancellation.csv  User.csv
SQL Queries/Creation/: CreateBooking.sql  CreateBuilding.sql  CreateCancellation.sql  CreateDatabase.sql  CreateRoom.sql  CreateUser.sql
SQL Queries/Features/AF1/: AF1.sql
SQL Queries/Features/AF2/: AF2.sql
SQL Queries/Features/AF3/: AddRoom.sql  DeleteRoom.sql  EditRoom.sql  SetUp.sql
SQL Queries/Features/AF4/: AdminLog.sql  CreateViewCommand.sql
SQL Queries/Features/AF5/: AF5a.sql  AF5b.sql
SQL Queries/Features/GetBuildings/: GetBuildings.sql
SQL Queries/Features/ModifyRooms/: AddRoom.sql  EditRoom.sql  (+1 more)
SQL Queries/Table Creation/: CreateBooking.sql  CreateBuilding.sql  CreateRoom.sql  CreateUser.sql
SQL Queries/Trigger Creation/: validBooking.sql  validCancellation.sql
Tools/DataImporter/: README.md  importer.ipynb  main.py  pyproject.toml  requirements.txt  template.env
Tools/DataPopulator/: main.py
Tools/PyUtils/: README.md  pyproject.toml  requirements.txt
Tools/PyUtils/src/PyUtils/: DateTimeTool.py  __init__.py
Tools/PyUtils/src/PyUtils/commands/: BaseCommandBuilder.py
Tools/PyUtils/src/PyUtils/constants/: ColNames.py  DBFuncNames.py  DBNames.py  FileEncodings.py  FileExts.py  Paths.py  TableNames.py
Tools/PyUtils/src/PyUtils/database/: DBBuilder.py  DBCleaner.py  DBConnData.py  DBSecrets.py  DBTool.py
Tools/PyUtils/src/PyUtils/enums/: EnumAtts.py  StrEnum.py
Tools/PyUtils/src/PyUtils/exceptions/: TesterFailed.py
Tools/PyUtils/src/PyUtils/testing/: BaseTestProgram.py
Tools/UnitTester/: README.md  main.py
backend/: README.md  dev.env  main.py  prod.env  toy.env
backend/src/: App.py  CommandBuilder.py  Config.py  __init__.py
frontend/: .env.dev  .env.prod  .env.toy  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
hello_world/: README.md  app.py  db.py
hello_world/static/: book_cancel.css  view.css
hello_world/templates/: book_cancel.html  index.html  view.html
(+191 files in other folders)
