[project]
name = "hello_world"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Au", email = "a32au@uwaterloo.ca"},
    {name = "Anika Awasthi", email = "a5awasth@uwaterloo.ca"},
    {name = "Ananya Ohrie", email = "aohrie@uwaterloo.ca"},
    {name = "Anthony Tieu", email = "anthony.tieu@uwaterloo.ca"},
    {name = "Kyle Zheng", email = "k4zheng@uwaterloo.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[project.scripts]
hello_world = "hello_world.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.group.dev.dependencies]
gunicorn = "^23.0.0"

